--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">LupsyApp</string>
+    <string name="BtnEntrar">Entrar</string>
+    <string name="etPalavra_passe">Palavra-Passe</string>
+    <string name="etE_mail">E-mail</string>
 </resources>
