Criação de item e como vai estar o layout deles, + filtro imagem

--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="tvSpacing" />
     <string name="tvUser">User</string>
     <string name="tvVendas">Mais Vendidas</string>
+    <string name="tvDescricao">Cerveja lager de cor dourada, com sabor leve e amargor suave, destacada por sua qualidade e consistência desde 1873</string>
+    <string name="tvNome">Heineken</string>
 </resources>
