menu inferior, inicio do perfil e home
Menu inferior funcionando, criaçao inicial do perfil e do home

--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="etNome">Nome Utilizador</string>
     <string name="BtnCriar">Criar</string>
     <string name="nome_invalido" />
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
