--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
     <string name="teor_alcool"> 1.5 </string>
     <string name="preco"> 1.5 </string>
     <string name="save_content">  </string>
+    <string name="teor_alcoolico">Teor Alcoólico</string>
+    <string name="precos">Preço</string>
 
 </resources>
