botão carrinho + estrela(nota) pagina detalhes

--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -45,5 +45,7 @@
     <string name="favoritar">Favoritar</string>
     <string name="tvUsername">Username</string>
     <string name="EtHUsername">Username</string>
+    <string name="carrinho_icon" />
+
 
 </resources>
