perfil com historico de bebidas e top3

--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="tvUsername">Username</string>
     <string name="EtHUsername">Username</string>
     <string name="carrinho_icon" />
+    <string name="top_3_bebidas_que_mais_bebeste">Top 3 Bebidas que mais bebeste</string>
 
 
 </resources>
