--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -46,6 +46,12 @@
     <string name="tvUsername">Username</string>
     <string name="EtHUsername">Username</string>
     <string name="carrinho_icon" />
+    <string name="et_NomeCev">Nome da Cerveja…</string>
+    <string name="etDescricao">Descrição da Cerveja…</string>
+    <string name="etTeor_Alcool">Teor Alcóolico%…</string>
+    <string name="etPreco">Preço€…</string>
+    <string name="save">Save Content</string>
+    <string name="txt_adicionar" />
 
 
 </resources>
