--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="etPreco">Preço€…</string>
     <string name="save">Save Content</string>
     <string name="txt_adicionar" />
+    <string name="rate">X.X</string>
 
 
 </resources>
