--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="error_teor_alcoolico">Teor de Alcóol com valor inválido</string>
     <string name="error_preco">Preço com valor inválido</string>
     <string name="beer_added">Cerveja Adicionada com Sucesso</string>
+    <string name="cart">Carrinho</string>
 
 
 </resources>
