--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="error_preco">Preço com valor inválido</string>
     <string name="beer_added">Cerveja Adicionada com Sucesso</string>
     <string name="cart">Carrinho</string>
+    <string name="ativa_para_clientes">Ativa para Clientes</string>
 
 
 </resources>
