carrinho Pagar funcional

--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="beer_added">Cerveja Adicionada com Sucesso</string>
     <string name="cart">Carrinho</string>
     <string name="ativa_para_clientes">Ativa para Clientes</string>
+    <string name="pagar">Pagar</string>
 
 
 </resources>
