Histórico de Faturas APP

--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -68,6 +68,9 @@
     <string name="cart">Carrinho</string>
     <string name="ativa_para_clientes">Ativa para Clientes</string>
     <string name="pagar">Pagar</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tvHistoricoFatura">Histórico de Faturas</string>
 
 
 </resources>
