--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -72,6 +72,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tvHistoricoFatura">Histórico de Compras</string>
     <string name="fab_action" />
+    <string name="ip">ip</string>
+    <string name="ip_hint">IP</string>
 
 
 </resources>
