--- a/LupsyApp/app/src/main/res/values/strings.xml
+++ b/LupsyApp/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="fab_action" />
     <string name="ip">ip</string>
     <string name="ip_hint">IP</string>
+    <string name="txt_salvar">guardar</string>
 
 
 </resources>
